--- a/packages/ibm-products-web-components/package.json
+++ b/packages/ibm-products-web-components/package.json
@@ -54,6 +54,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@carbon-labs/wc-empty-state": "^0.4.0",
     "@carbon/ibm-products-styles": "^2.68.1",
     "@carbon/styles": "1.85.0",
     "@carbon/web-components": "2.33.0",
