--- a/packages/ibm-products/package.json
+++ b/packages/ibm-products/package.json
@@ -5,6 +5,7 @@
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
+  "types": "lib/index.d.ts",
   "installConfig": {
     "hoistingLimits": "none"
   },
@@ -47,7 +48,7 @@
     "build:css": "copyfiles '../ibm-products-styles/css/**/*.*' ./ -u 2",
     "build:scss": "copyfiles '../ibm-products-styles/scss/**/*.*' ./ -u 2",
     "build:storybook": "yarn dlx cross-env \"NODE_OPTIONS=--max_old_space_size=8192\" && storybook build --quiet",
-    "build:js-new": "node scripts/build",
+    "build:js": "tsdown",
     "clean": "rimraf es lib css scss",
     "generate": "cross-env FORCE_COLOR=1 node scripts/generate/index.mjs",
     "postinstall": "ibmtelemetry --config=telemetry.yml",
@@ -103,6 +104,7 @@
     "rollup-plugin-strip-banner": "^3.1.0",
     "sass": "^1.85.1",
     "storybook": "^9.1.1",
+    "tsdown": "^0.14.1",
     "typescript-config-carbon": "^0.5.0",
     "vite": "npm:rolldown-vite@latest",
     "yargs": "^18.0.0"
