--- a/packages/ibm-products/tsconfig.json
+++ b/packages/ibm-products/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     // TODO: Turn back on once stricter typings for internal utilities are complete
-    "noImplicitAny": false
+    "noImplicitAny": false,
   },
   "include": ["src/**/*"]
 }
