--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lint:license:staged": "scripts/check-license.cjs -w",
     "lint:js": "eslint packages --fix",
     "lint:styles": "stylelint '**/*.scss' --fix",
-    "prepare": "husky install",
+    "prepare": "husky",
     "postinstall": "husky",
     "run-all": "lerna run --stream --prefix --loglevel success",
     "test": "run-p -s 'test:*'",
@@ -65,9 +65,10 @@
     "wc-coverage": "cd packages/ibm-products-web-components && yarn coverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/eslint-parser": "^7.26.10",
-    "@babel/preset-react": "^7.26.3",
+    "@babel/core": "^7.28.3",
+    "@babel/eslint-parser": "^7.28.0",
+    "@babel/plugin-transform-class-static-block": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
     "@carbon/grid": "^11.38.0",
     "@carbon/ibm-products-styles": "^2.68.0",
     "@carbon/layout": "^11.36.0",
