--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -28,4 +28,21 @@ component_management:
         - packages/ibm-products-web-components/**
 
 ignore:
+  - '**/*.deprecated.*'
+  - 'Datagrid/'
+  - 'DecoratorDualButton/'
+  - 'DecoratorLink/'
+  - 'DecoratorSingleButton/'
+  - 'DescriptionList/'
+  - 'EditFullPage/'
+  - 'EditSidePanel/'
+  - 'EditTearsheet/'
+  - 'EditTearsheetNarrow/'
+  - 'EditUpdateCards/'
+  - 'FilterPanel/'
+  - 'FilterSummary/'
+  - 'HttpErrors/'
+  - 'Nav/'
+  - 'StatusIndicator/'
+  - 'UserProfileImage/'
   - "**/StepFlow/story-assets/**/*"
