--- a/packages/ibm-products-web-components/examples/import-modal/package.json
+++ b/packages/ibm-products-web-components/examples/import-modal/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@carbon/ibm-products-styles": "^2.66.0",
     "@carbon/styles": "1.85.0",
-    "@carbon/web-components": "2.33.0",
+    "@carbon/web-components": "^2.37.0",
     "lit": "^3.2.1",
     "sass": "^1.64.1"
   },
