--- a/packages/ibm-products-web-components/examples/options-tile/package.json
+++ b/packages/ibm-products-web-components/examples/options-tile/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@carbon/ibm-products-web-components": "v0.19.0",
+    "@carbon/web-components": "^2.37.0",
     "lit": "^3.2.1",
     "sass": "^1.64.1"
   },
