--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -74,34 +74,34 @@ jobs:
           fi
 
       # For generating playwright json report for avt tests
-      - name: Install browsers
-        run: yarn playwright install --with-deps
+      # - name: Install browsers
+      #   run: yarn playwright install --with-deps
 
       - name: Continuous integration check (includes build)
         run: yarn ci-check
 
-      - name: Run storybook
-        id: storybook
-        run: |
-          npx serve -l 3000 packages/ibm-products/storybook-static &
-          pid=$!
-          echo "pid=$pid" >> $GITHUB_OUTPUT
-      - uses: ./actions/wait-for-it
-        with:
-          URL: 'http://localhost:3000'
-        timeout-minutes: 3
-      - name: Run AVT
-        if: github.repository == 'carbon-design-system/ibm-products'
-        run: |
-          yarn playwright test --project chromium --grep @avt --shard="${{ matrix.shardIndex }}/${{ matrix.shardTotal }}"
-      - name: Stop storybook
-        run: kill ${{ steps.storybook.outputs.pid }}
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: playwright-avt-report
-          path: .playwright
+      # - name: Run storybook
+      #   id: storybook
+      #   run: |
+      #     npx serve -l 3000 packages/ibm-products/storybook-static &
+      #     pid=$!
+      #     echo "pid=$pid" >> $GITHUB_OUTPUT
+      # - uses: ./actions/wait-for-it
+      #   with:
+      #     URL: 'http://localhost:3000'
+      #   timeout-minutes: 3
+      # - name: Run AVT
+      #   if: github.repository == 'carbon-design-system/ibm-products'
+      #   run: |
+      #     yarn playwright test --project chromium --grep @avt --shard="${{ matrix.shardIndex }}/${{ matrix.shardTotal }}"
+      # - name: Stop storybook
+      #   run: kill ${{ steps.storybook.outputs.pid }}
+      # - name: Upload test results
+      #   if: always()
+      #   uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
+      #   with:
+      #     name: playwright-avt-report
+      #     path: .playwright
 
       - name: Set NPM token
         run: |
