--- a/packages/ibm-products/tsconfig.json
+++ b/packages/ibm-products/tsconfig.json
@@ -5,5 +5,6 @@
     // TODO: Turn back on once stricter typings for internal utilities are complete
     "noImplicitAny": false
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.figma.tsx"]
 }
