--- a/.github/workflows/release-base.yml
+++ b/.github/workflows/release-base.yml
@@ -25,7 +25,7 @@ on:
 
 # Required for OIDC publishing https://docs.npmjs.com/trusted-publishers
 permissions:
-  #id-token: write
+  id-token: write
   contents: write
 
 jobs:
@@ -34,29 +34,25 @@ jobs:
     timeout-minutes: 60
     env:
       GH_TOKEN: ${{ secrets.MERGE_ACTION }}
-      NODE_AUTH_TOKEN: ${{ secrets.CARBON_BOT_NPM_TOKEN }}
     steps:
-      - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: '0'
           token: ${{ secrets.GH_TOKEN_LERNA }} # https://github.com/lerna/lerna/issues/1957
-
-      - name: Free disk space
-        uses: ./.github/actions/free-disk-space
 
       # https://github.com/actions/checkout#push-a-commit-using-the-built-in-token
       - run: |
           git config --global user.email ${{ secrets.CARBON_BOT_EMAIL }}
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
 
-      - name: Use Node.js version from .nvmrc
+      - name: Setup Node.js
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version: '20.x'
           registry-url: https://registry.npmjs.org
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn install
 
       - name:
           Run @ibm/telemetry-js-config-generator to regenerate ibm-products
@@ -66,22 +62,22 @@ jobs:
           yarn release-telemetry
 
       # This can be removed once @ibm/telemetry-js-config-generator has params to set the js scope
-      # - name: Add js scope to ibm-products telemetry config
-      #   if: github.event.inputs.dry-run == 'true'
-      #   run: |
-      #     echo "  js:
-      #         functions: {}
-      #         tokens: null" >> packages/ibm-products/telemetry.yml
-      #     echo "  js:
-      #         functions: {}
-      #         tokens: null" >> packages/ibm-products-web-components/telemetry.yml
-      #     if [ -z "$(git status --porcelain)" ]; then
-      #       echo "Mirror is clean, exiting..."
-      #     else
-      #       git add '**/telemetry.yml'
-      #       git commit -m "chore(telemetry): update telemetry configs"
-      #       git push origin
-      #     fi
+      - name: Add js scope to ibm-products telemetry config
+        if: github.event.inputs.dry-run == 'true'
+        run: |
+          echo "  js:
+              functions: {}
+              tokens: null" >> packages/ibm-products/telemetry.yml
+          echo "  js:
+              functions: {}
+              tokens: null" >> packages/ibm-products-web-components/telemetry.yml
+          if [ -z "$(git status --porcelain)" ]; then
+            echo "Mirror is clean, exiting..."
+          else
+            git add '**/telemetry.yml'
+            git commit -m "chore(telemetry): update telemetry configs"
+            git push origin
+          fi
 
       # For generating playwright json report for avt tests
       # - name: Install browsers
@@ -113,12 +109,12 @@ jobs:
       #     name: playwright-avt-report
       #     path: .playwright
 
-      # Set the PUBLISH environment variable to be used later in the Lerna publish command.
-      # Lerna has dry run on by default, need to pass in '--yes' flag before it will go ahead and publish.
-
       - name: Set NPM token
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.CARBON_BOT_NPM_TOKEN }}" >> .npmrc
+
+      # Set the PUBLISH environment variable to be used later in the Lerna publish command.
+      # Lerna has dry run on by default, need to pass in '--yes' flag before it will go ahead and publish.
       - name: Set dry run env variable
         run: |
           if [ "${{ github.event.inputs.dry-run }}" == "false"  ]; then
