--- a/.github/workflows/create-release-tag-and-pr.yml
+++ b/.github/workflows/create-release-tag-and-pr.yml
@@ -45,8 +45,10 @@ jobs:
           git config --global user.name ${{ secrets.CARBON_BOT_NAME }}
       - name: Create tag and push
         run: |
-          git tag -a ${{ github.event.inputs.tag }} -m "Release ${{ github.event.inputs.tag }}"
-          git push origin ${{ github.event.inputs.tag }}
+          if ! git rev-parse "${{ github.event.inputs.tag }}" >/dev/null 2>&1; then
+            git tag -a ${{ github.event.inputs.tag }} -m "Release ${{ github.event.inputs.tag }}"
+            git push origin ${{ github.event.inputs.tag }}
+          fi
 
   create-pull-request:
     runs-on: ubuntu-latest
