--- a/packages/ibm-products-web-components/examples/create-side-panel/package.json
+++ b/packages/ibm-products-web-components/examples/create-side-panel/package.json
@@ -11,8 +11,9 @@
     "dev": "vite"
   },
   "dependencies": {
+    "@carbon/ibm-products-styles": "^2.76.0",
     "@carbon/ibm-products-web-components": "^0.28.0",
-    "@carbon/web-components": "^2.37.0",
+    "@carbon/web-components": "^2.44.0",
     "lit": "^3.1.4"
   },
   "devDependencies": {
