--- a/packages/ibm-products-web-components/examples/create-side-panel/package.json
+++ b/packages/ibm-products-web-components/examples/create-side-panel/package.json
@@ -14,6 +14,8 @@
     "@carbon/ibm-products-styles": "^2.76.0",
     "@carbon/ibm-products-web-components": "^0.28.0",
     "@carbon/web-components": "^2.44.0",
+     "@carbon/styles": "latest",
+    "@carbon-labs/react-resizer": "latest",
     "lit": "^3.1.4"
   },
   "devDependencies": {
